--- a/app/src/App.css
+++ b/app/src/App.css
@@ -9,7 +9,7 @@ body{
     display: flex;
     justify-content: center;
     align-items: center; 
-    background-color: blue;
+    background-color: red;
 }
 
 .PrimaryContainer{
@@ -19,4 +19,8 @@ text-align: center;
 .listaOpciones{
     display: flex;
     flex-direction: column;
+}
+
+th{
+    padding: 10px;
 }
