--- a/app/src/App.css
+++ b/app/src/App.css
@@ -74,7 +74,7 @@ th{
     padding: 10px;
 }
 .nav{
-    height: 100%;
+    height: 1000px;
     margin-left: 0;
     border-right: 2px solid palevioletred;
     width: 20%;
@@ -140,7 +140,10 @@ width: 92%;
   right: 0; 
   margin-left: auto; 
   margin-right: auto; 
-  border-color: palevioletred; 
+  border: solid 2px palevioletred ;
+  border-radius: 4px;
+  padding: 10px;
+  margin-top: 100px;
 }
 
 .trtitle{
